# transit_planning

./: README.md  pyproject.toml
examples/: calculate_accessibilities.py  maputo_config.yml  run_maputo.py
transitlib/: config.py
transitlib/accessibility/: _init_.py  compare.py
transitlib/data/: _init_.py  download.py  osm.py  preprocess.py
transitlib/gtfs_generation/: _init_.py  writer.py
transitlib/route_extraction/: _init_.py  graph_utils.py  initial_routes.py  optimize.py
transitlib/simulation/: _init_.py  pings.py  users.py
transitlib/stop_extraction/: _init_.py  clustering.py
transitlib/viability/: _init_.py  model.py  segments.py
